--- a/about.html
+++ b/about.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>About</title>
 
+    <link href="https://fonts.googleapis.com/css2?family=Source+Sans+Pro&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="style.css">
     <script src="https://kit.fontawesome.com/c8a5c76e34.js" crossorigin="anonymous"></script>
 </head>
@@ -25,26 +26,26 @@
 
                     <ul class="menu">
                         <div class="margin-top-40">
-                            <a href="home.html"><li>Home</li></a>
-                            <li onClick="toggleSubmenu()">Portfolio</li>
+                            <li><a href="home.html">Home</a></li>
+                            <li class="active" onClick="toggleSubmenu()">Portfolio</li>
                             <ul class="submenu show">
-                                <a href="portfolio-interior.html"><li>Interiors</li></a>
-                                <a href="#"><li>Architecture</li></a>
-                                <a href="#"><li>Food</li></a>
-                                <a href="#"><li>E-commerce</li></a>
+                                <li><a href="portfolio-interior.html">Interiors</a></li>
+                                <li><a href="#">Architecture</a></li>
+                                <li><a href="#">Food</a></li>
+                                <li><a href="#">E</a>-commerce</li>
                             </ul>
-                            <a href="#"><li>Series</li></a>
+                            <li><a href="#">Series</a></li>
                         </div>
                         
                         <div class="margin-top-40">
-                            <a href="#"><li>Diario</li></a>
-                            <a href="about.html"><li class="active">About</li></a>
-                            <a href="contact.html"><li>Contacto</li></a>
+                            <li><a href="diario.html">Diario</a></li>
+                            <li><a href="about.html">About</a></li>
+                            <li><a href="contact.html">Contacto</a></li>
                         </div>
-        
+
                         <div class="icons">
-                            <a href="#"><i class="fab fa-instagram"></i></a>
-                            <a href="#"><i class="fas fa-shopping-cart"></i></a>
+                            <li><a href="#"><i class="fab fa-instagram"></i></a></li>
+                            <li><a href="shop.html"><i class="fas fa-shopping-cart"></i></a></li>
                         </div>
                     </ul>
                 </div>
